--- a/react-app/package.json
+++ b/react-app/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
+    "fetch-mock": "^9.11.0",
     "jest": "^29.2.0",
     "prettier": "2.7.1"
   }
